# internal/handlers/delete/delete.go
@@ -2,6 +2,7 @@ package resources
 
 import (
 	"net/http"
+	"slices"
 
 	"github.com/krateoplatformops/sample-webservice/internal/handlers"
 )
@@ -33,6 +34,19 @@ func (h *handler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	}
 	// Log the request
 	h.Log.Info("Received request", "name", name)
+
+	index := slices.IndexFunc(*h.ResourceStore, func(r handlers.Resource) bool {
+		return r.Name == name
+	})
+
+	if index == -1 {
+		h.Log.Error("", "name", name)
+
+		return
+	}
+
+	res := *h.ResourceStore
+	res = slices.Delete(res, index, index+1)
 
 	// Simulate resource deletion
 	// In a real application, you would delete the resource from a database or perform some other action here.
