# internal/handlers/get/get.go
@@ -2,7 +2,9 @@ package resources
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
+	"slices"
 
 	"github.com/krateoplatformops/sample-webservice/internal/handlers"
 )
@@ -27,7 +29,6 @@ var _ http.Handler = (*handler)(nil)
 // @Success 200 {object} []handlers.Resource
 // @Router /resource [get]
 func (h *handler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
-
 	name := r.URL.Query().Get("name")
 	if name == "" {
 		http.Error(w, "Name parameter is required", http.StatusBadRequest)
@@ -39,12 +40,20 @@ func (h *handler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	// Set the content type to JSON
 	w.Header().Set("Content-Type", "application/json")
 
-	// Create a sample resource
-	resource := handlers.Resource{
-		Name:        name,
-		Description: "This is a sample resource",
+	index := slices.IndexFunc(*h.ResourceStore, func(r handlers.Resource) bool {
+		return r.Name == name
+	})
+
+	fmt.Println("Length of resource store:", len(*h.ResourceStore))
+
+	if index == -1 {
+		h.Log.Error("Resource not found", "name", name)
+		http.Error(w, "", http.StatusNotFound)
+		return
 	}
 
+	res := *h.ResourceStore
+	resource := res[index]
 	// Write the response
 	if err := json.NewEncoder(w).Encode(resource); err != nil {
 		h.Log.Error("Failed to encode response", "error", err)
